--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <module>singleton</module>
     <module>factorymethod</module>
     <module>facade</module>
+    <module>adapter(wrapper)</module>
   </modules>
 
   <properties>
